# climategan_project

./: .gitignore  Makefile  README.md  apply_events.py  json_creator.py  my_images.json  pyproject.toml  requirements.txt
climategan/: trainer.py  utils.py
climategan_project/: __init__.py  dataset.py  features.py  plots.py
climategan_project/modeling/: predict.py  train.py
config/model/masker/: opts.yaml
config/model/painter/: opts.yaml
docs/: mkdocs.yml
docs/docs/: index.md
resultados_climate/: command.txt  hash.txt
